[tool.poetry]
name = "mlflow-docker"
version = "1.0.0"
description = "MLFlow wiht OIDC docker image"
authors = ["Alexander Kharkevich <alex@kharkevich.org>"]

[tool.poetry.dependencies]
python = "^3.12"
mlflow-oidc-auth = "4.1.0"
mlflow-skinny = "2.22.0"

# PostgreSQL support
psycopg = "^3.2.6"

# AWS S3 Artifact Store support
boto3 = "^1.37.34"

# Azure Blob Storage Artifact Store support
azure-storage-blob = "^12.25.1"
azure-identity = "^1.21.0"

# Google Cloud Storage Artifact Store support
google-cloud-storage = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
