[project]
name = "mlflow-docker"
version = "1.1.0"
description = "MLFlow with OIDC docker image"
authors = [{ name = "Alexander Kharkevich", email = "alex@kharkevich.org" }]
requires-python = ">=3.12, <3.13.dev0"
dependencies = [
    "mlflow-oidc-auth[caching-redis,full] (==5.5.2)",
    "mlflow (==3.2.0)",
    "boto3>=1.37.34",
    "azure-storage-blob>=12.25.1",
    "azure-identity>=1.21.0",
    "google-cloud-storage>=3.1.0",
    "psycopg2-binary (==2.9.10)",
]

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
